exports[`no-javascript-url > invalid(1): [Link](javascript:alert(1)) 1`] = `

Filename: example.md

  1 | [Link](javascript:alert(1))

`;

exports[`no-javascript-url > invalid(1): [Link](javascript:alert(1)) 2`] = `

Message:
> 1 | [Link](javascript:alert(1))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(10): [Link](java&#10;script:alert(1)) 1`] = `

Filename: example.md

  1 | [Link](java&#10;script:alert(1))

`;

exports[`no-javascript-url > invalid(10): [Link](java&#10;script:alert(1)) 2`] = `

Message:
> 1 | [Link](java&#10;script:alert(1))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(11): [Link](<&#9;javascript:alert(1)>) 1`] = `

Filename: example.md

  1 | [Link](<&#9;javascript:alert(1)>)

`;

exports[`no-javascript-url > invalid(11): [Link](<&#9;javascript:alert(1)>) 2`] = `

Message:
> 1 | [Link](<&#9;javascript:alert(1)>)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(12): [First](javascript:alert(1)) [Second](javascript:alert(2)) 1`] = `

Filename: example.md

  1 | [First](javascript:alert(1)) [Second](javascript:alert(2))

`;

exports[`no-javascript-url > invalid(12): [First](javascript:alert(1)) [Second](javascript:alert(2)) 2`] = `

Message:
> 1 | [First](javascript:alert(1)) [Second](javascript:alert(2))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(12): [First](javascript:alert(1)) [Second](javascript:alert(2)) 3`] = `

Message:
> 1 | [First](javascript:alert(1)) [Second](javascript:alert(2))
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(13): [Link][destination]\n[Again][destination]\n\n[destination]: javascript:alert(1) 1`] = `

Filename: example.md

  1 | [Link][destination]
  2 | [Again][destination]
  3 |
  4 | [destination]: javascript:alert(1)

`;

exports[`no-javascript-url > invalid(13): [Link][destination]\n[Again][destination]\n\n[destination]: javascript:alert(1) 2`] = `

Message:
  1 | [Link][destination]
  2 | [Again][destination]
  3 |
> 4 | [destination]: javascript:alert(1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(14): ![Image][destination]\n\n[destination]: javascript:alert(1) 1`] = `

Filename: example.md

  1 | ![Image][destination]
  2 |
  3 | [destination]: javascript:alert(1)

`;

exports[`no-javascript-url > invalid(14): ![Image][destination]\n\n[destination]: javascript:alert(1) 2`] = `

Message:
  1 | ![Image][destination]
  2 |
> 3 | [destination]: javascript:alert(1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(15): [unused]: javascript:alert(1) 1`] = `

Filename: example.md

  1 | [unused]: javascript:alert(1)

`;

exports[`no-javascript-url > invalid(15): [unused]: javascript:alert(1) 2`] = `

Message:
> 1 | [unused]: javascript:alert(1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(16): [destination]: java&#9;script:alert(1) 1`] = `

Filename: example.md

  1 | [destination]: java&#9;script:alert(1)

`;

exports[`no-javascript-url > invalid(16): [destination]: java&#9;script:alert(1) 2`] = `

Message:
> 1 | [destination]: java&#9;script:alert(1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(17): [Link](javascript:alert(1)) 1`] = `

Filename: example.md

  1 | [Link](javascript:alert(1))

`;

exports[`no-javascript-url > invalid(17): [Link](javascript:alert(1)) 2`] = `

Message:
> 1 | [Link](javascript:alert(1))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(18): ![Image](javascript:alert(1)) 1`] = `

Filename: example.md

  1 | ![Image](javascript:alert(1))

`;

exports[`no-javascript-url > invalid(18): ![Image](javascript:alert(1)) 2`] = `

Message:
> 1 | ![Image](javascript:alert(1))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(19): <javascript:alert(1)> 1`] = `

Filename: example.md

  1 | <javascript:alert(1)>

`;

exports[`no-javascript-url > invalid(19): <javascript:alert(1)> 2`] = `

Message:
> 1 | <javascript:alert(1)>
    | ^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(2): ![Image](javascript:alert(1)) 1`] = `

Filename: example.md

  1 | ![Image](javascript:alert(1))

`;

exports[`no-javascript-url > invalid(2): ![Image](javascript:alert(1)) 2`] = `

Message:
> 1 | ![Image](javascript:alert(1))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(20): <JaVaScRiPt:alert(1)> 1`] = `

Filename: example.md

  1 | <JaVaScRiPt:alert(1)>

`;

exports[`no-javascript-url > invalid(20): <JaVaScRiPt:alert(1)> 2`] = `

Message:
> 1 | <JaVaScRiPt:alert(1)>
    | ^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(21): [unused]: javascript:alert(1) 1`] = `

Filename: example.md

  1 | [unused]: javascript:alert(1)

`;

exports[`no-javascript-url > invalid(21): [unused]: javascript:alert(1) 2`] = `

Message:
> 1 | [unused]: javascript:alert(1)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(3): <javascript:alert(1)> 1`] = `

Filename: example.md

  1 | <javascript:alert(1)>

`;

exports[`no-javascript-url > invalid(3): <javascript:alert(1)> 2`] = `

Message:
> 1 | <javascript:alert(1)>
    | ^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(4): [Link](<javascript:alert(1)>) 1`] = `

Filename: example.md

  1 | [Link](<javascript:alert(1)>)

`;

exports[`no-javascript-url > invalid(4): [Link](<javascript:alert(1)>) 2`] = `

Message:
> 1 | [Link](<javascript:alert(1)>)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(5): [Link](JaVaScRiPt:alert(1)) 1`] = `

Filename: example.md

  1 | [Link](JaVaScRiPt:alert(1))

`;

exports[`no-javascript-url > invalid(5): [Link](JaVaScRiPt:alert(1)) 2`] = `

Message:
> 1 | [Link](JaVaScRiPt:alert(1))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(6): [Link](javasc&#114;ipt:alert(1)) 1`] = `

Filename: example.md

  1 | [Link](javasc&#114;ipt:alert(1))

`;

exports[`no-javascript-url > invalid(6): [Link](javasc&#114;ipt:alert(1)) 2`] = `

Message:
> 1 | [Link](javasc&#114;ipt:alert(1))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(7): [Link](javascript&#58;alert(1)) 1`] = `

Filename: example.md

  1 | [Link](javascript&#58;alert(1))

`;

exports[`no-javascript-url > invalid(7): [Link](javascript&#58;alert(1)) 2`] = `

Message:
> 1 | [Link](javascript&#58;alert(1))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(8): [Link](javascript\\:alert(1)) 1`] = `

Filename: example.md

  1 | [Link](javascript\\:alert(1))

`;

exports[`no-javascript-url > invalid(8): [Link](javascript\\:alert(1)) 2`] = `

Message:
> 1 | [Link](javascript\\:alert(1))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;

exports[`no-javascript-url > invalid(9): [Link](java&#9;script:alert(1)) 1`] = `

Filename: example.md

  1 | [Link](java&#9;script:alert(1))

`;

exports[`no-javascript-url > invalid(9): [Link](java&#9;script:alert(1)) 2`] = `

Message:
> 1 | [Link](java&#9;script:alert(1))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not use \`javascript:\` URLs.

`;
